<resources>
    <string name="app_name">Dresden Now And Then</string>
    <string name="button1">Overview</string>
    <string name="button2">What is here ?</string>
    <string name="button3">Map</string>
    <string name="button4">Tours</string>
    <string name="button5">About</string>
    <string name="BackButton">Back to main menu</string>
    <string name="title_activity_maps">Map</string>
    <string name="query_hint">Church, Museum, ..</string>
    <string name="title_activity_mapvik">Map</string>
    <string name="title_activity_kata">KataActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="accessToken">pk.eyJ1IjoidmlrcmFtZXN3YXIiLCJhIjoiY2lqY3g4c3AxMDAxZHZxa3V3dXVvb292dyJ9.93iw8ZUtP4RE51qedqVIuQ</string>
    <string name="action_settings">Settings</string>



</resources>
