<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity"
    android:background="@color/background">


    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:textColor = "@color/text_color"
        android:layout_centerHorizontal="true"
        android:drawableTop="@drawable/overview"
        android:background="#F7E1D2"
        android:layout_marginTop="25dp"
        android:onClick="OverviewActivity"/>
    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:text="@string/button2"
        android:textColor = "@color/text_color"
        android:layout_centerHorizontal="true"
        android:drawableTop="@drawable/where"
        android:background="#F7E1D2"
        android:layout_marginTop="10dp"
        android:onClick="WhatsHereActivity"/>
    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:text="@string/button3"
        android:textColor = "@color/text_color"
        android:layout_centerHorizontal="true"
        android:drawableTop="@drawable/map"
        android:background="#F7E1D2"
        android:layout_marginTop="10dp"
        android:onClick="MapActivity"/>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:text="@string/button4"
        android:textColor = "@color/text_color"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/tours"
        android:background="#F7E1D2"
        android:layout_marginTop="10dp"
        android:onClick="ToursActivity"/>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:text="@string/button5"
        android:textColor = "@color/text_color"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/about"
        android:background="#F7E1D2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:onClick="AboutActivity"/>

</RelativeLayout>
</ScrollView>
